// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`quotesEditorUtils decorateQuotedBlockElement should render quoted element children 1`] = `
<blockquote
  class="gorgias_quote"
  style="margin: 0px 0px 0px .8ex; border-left: 1px solid #ccc; padding-left: 1ex;"
>
  <div>
    Foo
  </div>
</blockquote>
`;

exports[`quotesEditorUtils decorateQuotedBlockElement should return quoted element 1`] = `
<blockquote
  class="gorgias_quote"
  style="margin: 0px 0px 0px .8ex; border-left: 1px solid #ccc; padding-left: 1ex;"
>
  <blockquote
    class="gorgias_quote"
    style="margin: 0px 0px 0px .8ex; border-left: 1px solid #ccc; padding-left: 1ex;"
  >
    <div />
  </blockquote>
</blockquote>
`;

exports[`quotesEditorUtils decorateQuotedBlockElement should return the element when quote depth is 0 1`] = `<span />`;

exports[`quotesEditorUtils getQuotedHtmlNode should return quoted node 1`] = `
Object {
  "quoteDepth": 2,
  "quotedNode": <span>
    Foo
  </span>,
}
`;

exports[`quotesEditorUtils getQuotedHtmlNode should return quoted text node 1`] = `
Object {
  "quoteDepth": 2,
  "quotedNode": Foo,
}
`;

exports[`quotesEditorUtils setQuoteDepth should add the quote data 1`] = `
Array [
  Object {
    "data": Object {
      "quoteDepth": 2,
    },
    "depth": 0,
    "text": "Foo",
    "type": "unstyled",
  },
]
`;

exports[`quotesEditorUtils setQuoteDepth should not add the quote data when depth in 0 1`] = `
Array [
  Object {
    "data": Object {},
    "depth": 0,
    "text": "Foo",
    "type": "unstyled",
  },
]
`;

exports[`quotesEditorUtils setQuoteDepth should not add the quote when depth is negative 1`] = `
Array [
  Object {
    "data": Object {},
    "depth": 0,
    "text": "Foo",
    "type": "unstyled",
  },
]
`;
